// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flowRenderer renderFlow empty flow 1`] = `
Object {
  "geometry": Object {
    "h": 168,
    "w": 264,
    "x": 0,
    "y": 0,
  },
  "isTerminal": true,
  "layoutConfig": Object {
    "branch": Object {
      "defaultWidth": 264,
      "emptyWidth": 176,
    },
    "connector": Object {
      "curveRadius": 16,
      "icon": Object {
        "h": 20,
        "w": 20,
      },
      "menu": Object {
        "h": 328,
        "w": 100,
      },
      "strokeWidth": 6,
      "types": Object {
        "straight": Object {
          "addOffset": 60,
          "h": 120,
          "labelOffset": 48,
          "variants": Object {
            "branchHead": Object {
              "addOffset": 84,
              "h": 144,
              "variants": Object {
                "center": Object {
                  "svgMarginBottom": -24,
                },
                "edge": Object {
                  "svgMarginTop": 24,
                },
                "fault": Object {
                  "labelOffset": 24,
                  "svgMarginTop": 24,
                },
              },
            },
            "branchHeadEmpty": Object {
              "addOffset": 84,
              "h": 120,
              "variants": Object {
                "center": Object {
                  "svgMarginBottom": -24,
                },
                "edge": Object {
                  "svgMarginBottom": 24,
                  "svgMarginTop": 24,
                },
                "fault": Object {
                  "labelOffset": 24,
                  "svgMarginTop": 24,
                },
                "loop": Object {
                  "svgMarginBottom": 48,
                },
              },
            },
            "branchTail": Object {
              "h": 96,
              "variants": Object {
                "center": Object {
                  "svgMarginBottom": -24,
                },
                "edge": Object {
                  "svgMarginBottom": 24,
                },
                "loop": Object {
                  "svgMarginBottom": 48,
                },
              },
            },
            "fault": Object {
              "labelOffset": 24,
              "svgMarginTop": 24,
            },
            "postMerge": Object {
              "addOffset": 36,
              "h": 96,
              "svgMarginTop": 24,
              "variants": Object {
                "center": Object {
                  "svgMarginBottom": -24,
                },
                "edge": Object {
                  "svgMarginBottom": 24,
                },
              },
            },
            "postMergeTail": Object {
              "addOffset": 36,
              "h": 72,
              "svgMarginTop": 24,
              "variants": Object {
                "center": Object {
                  "svgMarginBottom": -24,
                },
                "edge": Object {
                  "svgMarginBottom": 24,
                },
                "loop": Object {
                  "svgMarginBottom": 48,
                },
              },
            },
          },
        },
      },
    },
    "grid": Object {
      "h": 24,
      "w": 132,
    },
    "menu": Object {
      "marginBottom": 24,
    },
    "node": Object {
      "icon": Object {
        "h": 48,
        "w": 48,
      },
      "menu": Object {
        "branch": Object {
          "h": 225,
          "w": 100,
        },
        "default": Object {
          "h": 225,
          "w": 100,
        },
        "loop": Object {
          "h": 225,
          "w": 100,
        },
        "start": Object {
          "h": 200,
          "w": 100,
        },
      },
      "offsetX": 88,
      "w": 264,
    },
  },
  "nodes": Array [
    Object {
      "config": undefined,
      "flows": Array [],
      "geometry": Object {
        "h": 120,
        "w": 48,
        "x": 0,
        "y": 0,
      },
      "guid": "start-guid",
      "isNew": false,
      "isTerminal": false,
      "label": "start-guid",
      "logicConnectors": Array [],
      "menuOpened": false,
      "metadata": Object {
        "icon": "standard:default",
        "type": "start",
      },
      "nextConnector": Object {
        "addInfo": Object {
          "menuOpened": false,
          "offsetY": 60,
        },
        "connectionInfo": Object {
          "next": "end-guid",
          "prev": "start-guid",
        },
        "geometry": Object {
          "h": 120,
          "w": 6,
          "x": 0,
          "y": 0,
        },
        "isFault": undefined,
        "labelOffsetY": 48,
        "labelType": 0,
        "svgInfo": Object {
          "geometry": Object {
            "h": 120,
            "w": 6,
            "x": -3,
            "y": 0,
          },
          "path": "M 3, 0
L 3, 120",
        },
        "toBeDeleted": false,
        "type": "straight",
      },
      "node": Object {
        "childIndex": 0,
        "elementType": "start",
        "guid": "start-guid",
        "isTerminal": true,
        "label": "start-guid",
        "next": "end-guid",
        "parent": "root",
      },
      "toBeDeleted": false,
    },
    Object {
      "config": undefined,
      "flows": Array [],
      "geometry": Object {
        "h": 0,
        "w": 48,
        "x": 0,
        "y": 120,
      },
      "guid": "end-guid",
      "isNew": false,
      "isTerminal": true,
      "label": "end-guid",
      "logicConnectors": Array [],
      "menuOpened": false,
      "metadata": Object {
        "icon": "standard:default",
        "type": "end",
      },
      "node": Object {
        "elementType": "END_ELEMENT",
        "guid": "end-guid",
        "label": "end-guid",
        "prev": "start-guid",
      },
      "toBeDeleted": false,
    },
  ],
}
`;

exports[`flowRenderer renderFlow flow with decision with one element on left branch 1`] = `
Object {
  "geometry": Object {
    "h": 504,
    "w": 440,
    "x": 0,
    "y": 0,
  },
  "isTerminal": true,
  "layoutConfig": Object {
    "branch": Object {
      "defaultWidth": 264,
      "emptyWidth": 176,
    },
    "connector": Object {
      "curveRadius": 16,
      "icon": Object {
        "h": 20,
        "w": 20,
      },
      "menu": Object {
        "h": 328,
        "w": 100,
      },
      "strokeWidth": 6,
      "types": Object {
        "straight": Object {
          "addOffset": 60,
          "h": 120,
          "labelOffset": 48,
          "variants": Object {
            "branchHead": Object {
              "addOffset": 84,
              "h": 144,
              "variants": Object {
                "center": Object {
                  "svgMarginBottom": -24,
                },
                "edge": Object {
                  "svgMarginTop": 24,
                },
                "fault": Object {
                  "labelOffset": 24,
                  "svgMarginTop": 24,
                },
              },
            },
            "branchHeadEmpty": Object {
              "addOffset": 84,
              "h": 120,
              "variants": Object {
                "center": Object {
                  "svgMarginBottom": -24,
                },
                "edge": Object {
                  "svgMarginBottom": 24,
                  "svgMarginTop": 24,
                },
                "fault": Object {
                  "labelOffset": 24,
                  "svgMarginTop": 24,
                },
                "loop": Object {
                  "svgMarginBottom": 48,
                },
              },
            },
            "branchTail": Object {
              "h": 96,
              "variants": Object {
                "center": Object {
                  "svgMarginBottom": -24,
                },
                "edge": Object {
                  "svgMarginBottom": 24,
                },
                "loop": Object {
                  "svgMarginBottom": 48,
                },
              },
            },
            "fault": Object {
              "labelOffset": 24,
              "svgMarginTop": 24,
            },
            "postMerge": Object {
              "addOffset": 36,
              "h": 96,
              "svgMarginTop": 24,
              "variants": Object {
                "center": Object {
                  "svgMarginBottom": -24,
                },
                "edge": Object {
                  "svgMarginBottom": 24,
                },
              },
            },
            "postMergeTail": Object {
              "addOffset": 36,
              "h": 72,
              "svgMarginTop": 24,
              "variants": Object {
                "center": Object {
                  "svgMarginBottom": -24,
                },
                "edge": Object {
                  "svgMarginBottom": 24,
                },
                "loop": Object {
                  "svgMarginBottom": 48,
                },
              },
            },
          },
        },
      },
    },
    "grid": Object {
      "h": 24,
      "w": 132,
    },
    "menu": Object {
      "marginBottom": 24,
    },
    "node": Object {
      "icon": Object {
        "h": 48,
        "w": 48,
      },
      "menu": Object {
        "branch": Object {
          "h": 225,
          "w": 100,
        },
        "default": Object {
          "h": 225,
          "w": 100,
        },
        "loop": Object {
          "h": 225,
          "w": 100,
        },
        "start": Object {
          "h": 200,
          "w": 100,
        },
      },
      "offsetX": 88,
      "w": 264,
    },
  },
  "nodes": Array [
    Object {
      "config": undefined,
      "flows": Array [],
      "geometry": Object {
        "h": 120,
        "w": 48,
        "x": 0,
        "y": 0,
      },
      "guid": "start-guid",
      "isNew": false,
      "isTerminal": false,
      "label": "start-guid",
      "logicConnectors": Array [],
      "menuOpened": false,
      "metadata": Object {
        "icon": "standard:default",
        "type": "start",
      },
      "nextConnector": Object {
        "addInfo": Object {
          "menuOpened": false,
          "offsetY": 60,
        },
        "connectionInfo": Object {
          "next": "branch-guid",
          "prev": "start-guid",
        },
        "geometry": Object {
          "h": 120,
          "w": 6,
          "x": 0,
          "y": 0,
        },
        "isFault": undefined,
        "labelOffsetY": 48,
        "labelType": 0,
        "svgInfo": Object {
          "geometry": Object {
            "h": 120,
            "w": 6,
            "x": -3,
            "y": 0,
          },
          "path": "M 3, 0
L 3, 120",
        },
        "toBeDeleted": false,
        "type": "straight",
      },
      "node": Object {
        "childIndex": 0,
        "elementType": "start",
        "guid": "start-guid",
        "isTerminal": true,
        "label": "start-guid",
        "next": "branch-guid",
        "parent": "root",
      },
      "toBeDeleted": false,
    },
    Object {
      "conditionOptions": undefined,
      "config": undefined,
      "defaultConnectorLabel": "Default Connector Label",
      "flows": Array [
        Object {
          "geometry": Object {
            "h": 240,
            "w": 264,
            "x": -132,
            "y": 0,
          },
          "isTerminal": false,
          "layoutConfig": Object {
            "branch": Object {
              "defaultWidth": 264,
              "emptyWidth": 176,
            },
            "connector": Object {
              "curveRadius": 16,
              "icon": Object {
                "h": 20,
                "w": 20,
              },
              "menu": Object {
                "h": 328,
                "w": 100,
              },
              "strokeWidth": 6,
              "types": Object {
                "straight": Object {
                  "addOffset": 60,
                  "h": 120,
                  "labelOffset": 48,
                  "variants": Object {
                    "branchHead": Object {
                      "addOffset": 84,
                      "h": 144,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginTop": 24,
                        },
                        "fault": Object {
                          "labelOffset": 24,
                          "svgMarginTop": 24,
                        },
                      },
                    },
                    "branchHeadEmpty": Object {
                      "addOffset": 84,
                      "h": 120,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginBottom": 24,
                          "svgMarginTop": 24,
                        },
                        "fault": Object {
                          "labelOffset": 24,
                          "svgMarginTop": 24,
                        },
                        "loop": Object {
                          "svgMarginBottom": 48,
                        },
                      },
                    },
                    "branchTail": Object {
                      "h": 96,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginBottom": 24,
                        },
                        "loop": Object {
                          "svgMarginBottom": 48,
                        },
                      },
                    },
                    "fault": Object {
                      "labelOffset": 24,
                      "svgMarginTop": 24,
                    },
                    "postMerge": Object {
                      "addOffset": 36,
                      "h": 96,
                      "svgMarginTop": 24,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginBottom": 24,
                        },
                      },
                    },
                    "postMergeTail": Object {
                      "addOffset": 36,
                      "h": 72,
                      "svgMarginTop": 24,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginBottom": 24,
                        },
                        "loop": Object {
                          "svgMarginBottom": 48,
                        },
                      },
                    },
                  },
                },
              },
            },
            "grid": Object {
              "h": 24,
              "w": 132,
            },
            "menu": Object {
              "marginBottom": 24,
            },
            "node": Object {
              "icon": Object {
                "h": 48,
                "w": 48,
              },
              "menu": Object {
                "branch": Object {
                  "h": 225,
                  "w": 100,
                },
                "default": Object {
                  "h": 225,
                  "w": 100,
                },
                "loop": Object {
                  "h": 225,
                  "w": 100,
                },
                "start": Object {
                  "h": 200,
                  "w": 100,
                },
              },
              "offsetX": 88,
              "w": 264,
            },
          },
          "nodes": Array [
            Object {
              "config": undefined,
              "flows": Array [],
              "geometry": Object {
                "h": 96,
                "w": 48,
                "x": 0,
                "y": 144,
              },
              "guid": "branch-left-head-guid",
              "isNew": false,
              "isTerminal": false,
              "label": "default",
              "logicConnectors": Array [],
              "menuOpened": false,
              "metadata": Object {
                "icon": "standard:default",
                "type": "default",
              },
              "nextConnector": Object {
                "addInfo": Object {
                  "menuOpened": false,
                  "offsetY": 60,
                },
                "connectionInfo": Object {
                  "next": undefined,
                  "prev": "branch-left-head-guid",
                },
                "geometry": Object {
                  "h": 96,
                  "w": 6,
                  "x": 0,
                  "y": 0,
                },
                "isFault": undefined,
                "labelOffsetY": 48,
                "labelType": 0,
                "svgInfo": Object {
                  "geometry": Object {
                    "h": 96,
                    "w": 6,
                    "x": -3,
                    "y": 0,
                  },
                  "path": "M 3, 0
L 3, 72",
                },
                "toBeDeleted": true,
                "type": "straight",
              },
              "node": Object {
                "childIndex": 0,
                "elementType": "default",
                "guid": "branch-left-head-guid",
                "label": "default",
                "parent": "branch-guid",
              },
              "toBeDeleted": true,
            },
          ],
          "preConnector": Object {
            "addInfo": Object {
              "menuOpened": false,
              "offsetY": 84,
            },
            "connectionInfo": Object {
              "childIndex": 0,
              "parent": "branch-guid",
            },
            "geometry": Object {
              "h": 144,
              "w": 6,
              "x": 0,
              "y": 0,
            },
            "isFault": false,
            "labelOffsetY": 48,
            "labelType": 1,
            "svgInfo": Object {
              "geometry": Object {
                "h": 144,
                "w": 6,
                "x": -3,
                "y": 0,
              },
              "path": "M 3, 24
L 3, 144",
            },
            "toBeDeleted": true,
            "type": "straight",
          },
        },
        Object {
          "geometry": Object {
            "h": 120,
            "w": 176,
            "x": 132,
            "y": 0,
          },
          "isTerminal": false,
          "layoutConfig": Object {
            "branch": Object {
              "defaultWidth": 264,
              "emptyWidth": 176,
            },
            "connector": Object {
              "curveRadius": 16,
              "icon": Object {
                "h": 20,
                "w": 20,
              },
              "menu": Object {
                "h": 328,
                "w": 100,
              },
              "strokeWidth": 6,
              "types": Object {
                "straight": Object {
                  "addOffset": 60,
                  "h": 120,
                  "labelOffset": 48,
                  "variants": Object {
                    "branchHead": Object {
                      "addOffset": 84,
                      "h": 144,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginTop": 24,
                        },
                        "fault": Object {
                          "labelOffset": 24,
                          "svgMarginTop": 24,
                        },
                      },
                    },
                    "branchHeadEmpty": Object {
                      "addOffset": 84,
                      "h": 120,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginBottom": 24,
                          "svgMarginTop": 24,
                        },
                        "fault": Object {
                          "labelOffset": 24,
                          "svgMarginTop": 24,
                        },
                        "loop": Object {
                          "svgMarginBottom": 48,
                        },
                      },
                    },
                    "branchTail": Object {
                      "h": 96,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginBottom": 24,
                        },
                        "loop": Object {
                          "svgMarginBottom": 48,
                        },
                      },
                    },
                    "fault": Object {
                      "labelOffset": 24,
                      "svgMarginTop": 24,
                    },
                    "postMerge": Object {
                      "addOffset": 36,
                      "h": 96,
                      "svgMarginTop": 24,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginBottom": 24,
                        },
                      },
                    },
                    "postMergeTail": Object {
                      "addOffset": 36,
                      "h": 72,
                      "svgMarginTop": 24,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginBottom": 24,
                        },
                        "loop": Object {
                          "svgMarginBottom": 48,
                        },
                      },
                    },
                  },
                },
              },
            },
            "grid": Object {
              "h": 24,
              "w": 132,
            },
            "menu": Object {
              "marginBottom": 24,
            },
            "node": Object {
              "icon": Object {
                "h": 48,
                "w": 48,
              },
              "menu": Object {
                "branch": Object {
                  "h": 225,
                  "w": 100,
                },
                "default": Object {
                  "h": 225,
                  "w": 100,
                },
                "loop": Object {
                  "h": 225,
                  "w": 100,
                },
                "start": Object {
                  "h": 200,
                  "w": 100,
                },
              },
              "offsetX": 88,
              "w": 264,
            },
          },
          "nodes": Array [],
          "preConnector": Object {
            "addInfo": Object {
              "menuOpened": false,
              "offsetY": 84,
            },
            "connectionInfo": Object {
              "childIndex": 1,
              "parent": "branch-guid",
            },
            "connectorBadgeLabel": "Default Connector Label",
            "geometry": Object {
              "h": 240,
              "w": 6,
              "x": 0,
              "y": 0,
            },
            "isFault": false,
            "labelOffsetY": 48,
            "labelType": 1,
            "svgInfo": Object {
              "geometry": Object {
                "h": 240,
                "w": 6,
                "x": -3,
                "y": 0,
              },
              "path": "M 3, 24
L 3, 216",
            },
            "toBeDeleted": false,
            "type": "straight",
          },
        },
      ],
      "geometry": Object {
        "h": 336,
        "w": 440,
        "x": 0,
        "y": 120,
      },
      "guid": "branch-guid",
      "isNew": false,
      "isTerminal": false,
      "label": "branch-guid",
      "logicConnectors": Array [
        Object {
          "connectionInfo": Object {
            "childIndex": 0,
            "parent": "branch-guid",
          },
          "geometry": Object {
            "h": 24,
            "w": 132,
            "x": -132,
            "y": 0,
          },
          "isFault": undefined,
          "labelType": 0,
          "svgInfo": Object {
            "geometry": Object {
              "h": 33,
              "w": 135,
              "x": -3,
              "y": -3,
            },
            "path": "M 135, 3
L 19, 3
A 16 16 0 0 0, 3, 19
L 3, 27",
          },
          "toBeDeleted": true,
          "type": "branchLeft",
        },
        Object {
          "connectionInfo": Object {
            "childIndex": 1,
            "parent": "branch-guid",
          },
          "geometry": Object {
            "h": 24,
            "w": 132,
            "x": 0,
            "y": 0,
          },
          "isFault": undefined,
          "labelType": 0,
          "svgInfo": Object {
            "geometry": Object {
              "h": 33,
              "w": 141,
              "x": -3,
              "y": -3,
            },
            "path": "M 3, 3
L 119, 3
A 16 16 0 0 1, 135, 19
L 135, 27",
          },
          "toBeDeleted": false,
          "type": "branchRight",
        },
        Object {
          "connectionInfo": Object {
            "childIndex": 0,
            "parent": "branch-guid",
          },
          "geometry": Object {
            "h": 48,
            "w": 132,
            "x": -132,
            "y": 216,
          },
          "isFault": undefined,
          "labelType": 0,
          "svgInfo": Object {
            "geometry": Object {
              "h": 48,
              "w": 141,
              "x": -3,
              "y": 0,
            },
            "path": "M 3, 0
L 3, 8
A 16 16 0 0 0, 19, 24
L 119, 24
A 16 16 0 0 1, 135, 40
L 135, 48",
          },
          "toBeDeleted": true,
          "type": "mergeLeft",
        },
        Object {
          "connectionInfo": Object {
            "childIndex": 0,
            "parent": "branch-guid",
          },
          "geometry": Object {
            "h": 48,
            "w": 132,
            "x": 0,
            "y": 216,
          },
          "isFault": undefined,
          "labelType": 0,
          "svgInfo": Object {
            "geometry": Object {
              "h": 48,
              "w": 138,
              "x": -3,
              "y": 0,
            },
            "path": "M 135, 0
L 135, 8
A 16 16 0 0 1, 119, 24
L 19, 24
A 16 16 0 0 0, 3, 40
L 3, 48",
          },
          "toBeDeleted": false,
          "type": "mergeRight",
        },
      ],
      "menuOpened": false,
      "metadata": Object {
        "icon": "standard:default",
        "type": "branch",
      },
      "nextConnector": Object {
        "addInfo": Object {
          "menuOpened": false,
          "offsetY": 36,
        },
        "connectionInfo": Object {
          "next": "end-guid",
          "prev": "branch-guid",
        },
        "geometry": Object {
          "h": 96,
          "w": 6,
          "x": 0,
          "y": 240,
        },
        "isFault": undefined,
        "labelOffsetY": 48,
        "labelType": 0,
        "svgInfo": Object {
          "geometry": Object {
            "h": 120,
            "w": 6,
            "x": -3,
            "y": 0,
          },
          "path": "M 3, 24
L 3, 144",
        },
        "toBeDeleted": false,
        "type": "straight",
      },
      "node": Object {
        "children": Array [
          "branch-left-head-guid",
          null,
        ],
        "defaultConnectorLabel": "Default Connector Label",
        "elementType": "branch",
        "guid": "branch-guid",
        "label": "branch-guid",
        "next": "end-guid",
        "prev": "start-guid",
      },
      "toBeDeleted": true,
    },
    Object {
      "config": undefined,
      "flows": Array [],
      "geometry": Object {
        "h": 0,
        "w": 48,
        "x": 0,
        "y": 456,
      },
      "guid": "end-guid",
      "isNew": false,
      "isTerminal": true,
      "label": "end-guid",
      "logicConnectors": Array [],
      "menuOpened": false,
      "metadata": Object {
        "icon": "standard:default",
        "type": "end",
      },
      "node": Object {
        "elementType": "END_ELEMENT",
        "guid": "end-guid",
        "label": "end-guid",
        "prev": "branch-guid",
      },
      "toBeDeleted": false,
    },
  ],
}
`;

exports[`flowRenderer renderFlow flow with empty decision 1`] = `
Object {
  "geometry": Object {
    "h": 384,
    "w": 352,
    "x": 0,
    "y": 0,
  },
  "isTerminal": true,
  "layoutConfig": Object {
    "branch": Object {
      "defaultWidth": 264,
      "emptyWidth": 176,
    },
    "connector": Object {
      "curveRadius": 16,
      "icon": Object {
        "h": 20,
        "w": 20,
      },
      "menu": Object {
        "h": 328,
        "w": 100,
      },
      "strokeWidth": 6,
      "types": Object {
        "straight": Object {
          "addOffset": 60,
          "h": 120,
          "labelOffset": 48,
          "variants": Object {
            "branchHead": Object {
              "addOffset": 84,
              "h": 144,
              "variants": Object {
                "center": Object {
                  "svgMarginBottom": -24,
                },
                "edge": Object {
                  "svgMarginTop": 24,
                },
                "fault": Object {
                  "labelOffset": 24,
                  "svgMarginTop": 24,
                },
              },
            },
            "branchHeadEmpty": Object {
              "addOffset": 84,
              "h": 120,
              "variants": Object {
                "center": Object {
                  "svgMarginBottom": -24,
                },
                "edge": Object {
                  "svgMarginBottom": 24,
                  "svgMarginTop": 24,
                },
                "fault": Object {
                  "labelOffset": 24,
                  "svgMarginTop": 24,
                },
                "loop": Object {
                  "svgMarginBottom": 48,
                },
              },
            },
            "branchTail": Object {
              "h": 96,
              "variants": Object {
                "center": Object {
                  "svgMarginBottom": -24,
                },
                "edge": Object {
                  "svgMarginBottom": 24,
                },
                "loop": Object {
                  "svgMarginBottom": 48,
                },
              },
            },
            "fault": Object {
              "labelOffset": 24,
              "svgMarginTop": 24,
            },
            "postMerge": Object {
              "addOffset": 36,
              "h": 96,
              "svgMarginTop": 24,
              "variants": Object {
                "center": Object {
                  "svgMarginBottom": -24,
                },
                "edge": Object {
                  "svgMarginBottom": 24,
                },
              },
            },
            "postMergeTail": Object {
              "addOffset": 36,
              "h": 72,
              "svgMarginTop": 24,
              "variants": Object {
                "center": Object {
                  "svgMarginBottom": -24,
                },
                "edge": Object {
                  "svgMarginBottom": 24,
                },
                "loop": Object {
                  "svgMarginBottom": 48,
                },
              },
            },
          },
        },
      },
    },
    "grid": Object {
      "h": 24,
      "w": 132,
    },
    "menu": Object {
      "marginBottom": 24,
    },
    "node": Object {
      "icon": Object {
        "h": 48,
        "w": 48,
      },
      "menu": Object {
        "branch": Object {
          "h": 225,
          "w": 100,
        },
        "default": Object {
          "h": 225,
          "w": 100,
        },
        "loop": Object {
          "h": 225,
          "w": 100,
        },
        "start": Object {
          "h": 200,
          "w": 100,
        },
      },
      "offsetX": 88,
      "w": 264,
    },
  },
  "nodes": Array [
    Object {
      "config": undefined,
      "flows": Array [],
      "geometry": Object {
        "h": 120,
        "w": 48,
        "x": 0,
        "y": 0,
      },
      "guid": "start-guid",
      "isNew": false,
      "isTerminal": false,
      "label": "start-guid",
      "logicConnectors": Array [],
      "menuOpened": false,
      "metadata": Object {
        "icon": "standard:default",
        "type": "start",
      },
      "nextConnector": Object {
        "addInfo": Object {
          "menuOpened": false,
          "offsetY": 60,
        },
        "connectionInfo": Object {
          "next": "branch-guid",
          "prev": "start-guid",
        },
        "geometry": Object {
          "h": 120,
          "w": 6,
          "x": 0,
          "y": 0,
        },
        "isFault": undefined,
        "labelOffsetY": 48,
        "labelType": 0,
        "svgInfo": Object {
          "geometry": Object {
            "h": 120,
            "w": 6,
            "x": -3,
            "y": 0,
          },
          "path": "M 3, 0
L 3, 120",
        },
        "toBeDeleted": false,
        "type": "straight",
      },
      "node": Object {
        "childIndex": 0,
        "elementType": "start",
        "guid": "start-guid",
        "isTerminal": true,
        "label": "start-guid",
        "next": "branch-guid",
        "parent": "root",
      },
      "toBeDeleted": false,
    },
    Object {
      "conditionOptions": undefined,
      "config": undefined,
      "defaultConnectorLabel": "Default Connector Label",
      "flows": Array [
        Object {
          "geometry": Object {
            "h": 120,
            "w": 176,
            "x": -88,
            "y": 0,
          },
          "isTerminal": false,
          "layoutConfig": Object {
            "branch": Object {
              "defaultWidth": 264,
              "emptyWidth": 176,
            },
            "connector": Object {
              "curveRadius": 16,
              "icon": Object {
                "h": 20,
                "w": 20,
              },
              "menu": Object {
                "h": 328,
                "w": 100,
              },
              "strokeWidth": 6,
              "types": Object {
                "straight": Object {
                  "addOffset": 60,
                  "h": 120,
                  "labelOffset": 48,
                  "variants": Object {
                    "branchHead": Object {
                      "addOffset": 84,
                      "h": 144,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginTop": 24,
                        },
                        "fault": Object {
                          "labelOffset": 24,
                          "svgMarginTop": 24,
                        },
                      },
                    },
                    "branchHeadEmpty": Object {
                      "addOffset": 84,
                      "h": 120,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginBottom": 24,
                          "svgMarginTop": 24,
                        },
                        "fault": Object {
                          "labelOffset": 24,
                          "svgMarginTop": 24,
                        },
                        "loop": Object {
                          "svgMarginBottom": 48,
                        },
                      },
                    },
                    "branchTail": Object {
                      "h": 96,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginBottom": 24,
                        },
                        "loop": Object {
                          "svgMarginBottom": 48,
                        },
                      },
                    },
                    "fault": Object {
                      "labelOffset": 24,
                      "svgMarginTop": 24,
                    },
                    "postMerge": Object {
                      "addOffset": 36,
                      "h": 96,
                      "svgMarginTop": 24,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginBottom": 24,
                        },
                      },
                    },
                    "postMergeTail": Object {
                      "addOffset": 36,
                      "h": 72,
                      "svgMarginTop": 24,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginBottom": 24,
                        },
                        "loop": Object {
                          "svgMarginBottom": 48,
                        },
                      },
                    },
                  },
                },
              },
            },
            "grid": Object {
              "h": 24,
              "w": 132,
            },
            "menu": Object {
              "marginBottom": 24,
            },
            "node": Object {
              "icon": Object {
                "h": 48,
                "w": 48,
              },
              "menu": Object {
                "branch": Object {
                  "h": 225,
                  "w": 100,
                },
                "default": Object {
                  "h": 225,
                  "w": 100,
                },
                "loop": Object {
                  "h": 225,
                  "w": 100,
                },
                "start": Object {
                  "h": 200,
                  "w": 100,
                },
              },
              "offsetX": 88,
              "w": 264,
            },
          },
          "nodes": Array [],
          "preConnector": Object {
            "addInfo": Object {
              "menuOpened": false,
              "offsetY": 84,
            },
            "connectionInfo": Object {
              "childIndex": 0,
              "parent": "branch-guid",
            },
            "geometry": Object {
              "h": 120,
              "w": 6,
              "x": 0,
              "y": 0,
            },
            "isFault": false,
            "labelOffsetY": 48,
            "labelType": 1,
            "svgInfo": Object {
              "geometry": Object {
                "h": 120,
                "w": 6,
                "x": -3,
                "y": 0,
              },
              "path": "M 3, 24
L 3, 96",
            },
            "toBeDeleted": false,
            "type": "straight",
          },
        },
        Object {
          "geometry": Object {
            "h": 120,
            "w": 176,
            "x": 88,
            "y": 0,
          },
          "isTerminal": false,
          "layoutConfig": Object {
            "branch": Object {
              "defaultWidth": 264,
              "emptyWidth": 176,
            },
            "connector": Object {
              "curveRadius": 16,
              "icon": Object {
                "h": 20,
                "w": 20,
              },
              "menu": Object {
                "h": 328,
                "w": 100,
              },
              "strokeWidth": 6,
              "types": Object {
                "straight": Object {
                  "addOffset": 60,
                  "h": 120,
                  "labelOffset": 48,
                  "variants": Object {
                    "branchHead": Object {
                      "addOffset": 84,
                      "h": 144,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginTop": 24,
                        },
                        "fault": Object {
                          "labelOffset": 24,
                          "svgMarginTop": 24,
                        },
                      },
                    },
                    "branchHeadEmpty": Object {
                      "addOffset": 84,
                      "h": 120,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginBottom": 24,
                          "svgMarginTop": 24,
                        },
                        "fault": Object {
                          "labelOffset": 24,
                          "svgMarginTop": 24,
                        },
                        "loop": Object {
                          "svgMarginBottom": 48,
                        },
                      },
                    },
                    "branchTail": Object {
                      "h": 96,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginBottom": 24,
                        },
                        "loop": Object {
                          "svgMarginBottom": 48,
                        },
                      },
                    },
                    "fault": Object {
                      "labelOffset": 24,
                      "svgMarginTop": 24,
                    },
                    "postMerge": Object {
                      "addOffset": 36,
                      "h": 96,
                      "svgMarginTop": 24,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginBottom": 24,
                        },
                      },
                    },
                    "postMergeTail": Object {
                      "addOffset": 36,
                      "h": 72,
                      "svgMarginTop": 24,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginBottom": 24,
                        },
                        "loop": Object {
                          "svgMarginBottom": 48,
                        },
                      },
                    },
                  },
                },
              },
            },
            "grid": Object {
              "h": 24,
              "w": 132,
            },
            "menu": Object {
              "marginBottom": 24,
            },
            "node": Object {
              "icon": Object {
                "h": 48,
                "w": 48,
              },
              "menu": Object {
                "branch": Object {
                  "h": 225,
                  "w": 100,
                },
                "default": Object {
                  "h": 225,
                  "w": 100,
                },
                "loop": Object {
                  "h": 225,
                  "w": 100,
                },
                "start": Object {
                  "h": 200,
                  "w": 100,
                },
              },
              "offsetX": 88,
              "w": 264,
            },
          },
          "nodes": Array [],
          "preConnector": Object {
            "addInfo": Object {
              "menuOpened": false,
              "offsetY": 84,
            },
            "connectionInfo": Object {
              "childIndex": 1,
              "parent": "branch-guid",
            },
            "connectorBadgeLabel": "Default Connector Label",
            "geometry": Object {
              "h": 120,
              "w": 6,
              "x": 0,
              "y": 0,
            },
            "isFault": false,
            "labelOffsetY": 48,
            "labelType": 1,
            "svgInfo": Object {
              "geometry": Object {
                "h": 120,
                "w": 6,
                "x": -3,
                "y": 0,
              },
              "path": "M 3, 24
L 3, 96",
            },
            "toBeDeleted": false,
            "type": "straight",
          },
        },
      ],
      "geometry": Object {
        "h": 216,
        "w": 352,
        "x": 0,
        "y": 120,
      },
      "guid": "branch-guid",
      "isNew": false,
      "isTerminal": false,
      "label": "branch-guid",
      "logicConnectors": Array [
        Object {
          "connectionInfo": Object {
            "childIndex": 0,
            "parent": "branch-guid",
          },
          "geometry": Object {
            "h": 24,
            "w": 88,
            "x": -88,
            "y": 0,
          },
          "isFault": undefined,
          "labelType": 0,
          "svgInfo": Object {
            "geometry": Object {
              "h": 33,
              "w": 91,
              "x": -3,
              "y": -3,
            },
            "path": "M 91, 3
L 19, 3
A 16 16 0 0 0, 3, 19
L 3, 27",
          },
          "toBeDeleted": false,
          "type": "branchLeft",
        },
        Object {
          "connectionInfo": Object {
            "childIndex": 1,
            "parent": "branch-guid",
          },
          "geometry": Object {
            "h": 24,
            "w": 88,
            "x": 0,
            "y": 0,
          },
          "isFault": undefined,
          "labelType": 0,
          "svgInfo": Object {
            "geometry": Object {
              "h": 33,
              "w": 97,
              "x": -3,
              "y": -3,
            },
            "path": "M 3, 3
L 75, 3
A 16 16 0 0 1, 91, 19
L 91, 27",
          },
          "toBeDeleted": false,
          "type": "branchRight",
        },
        Object {
          "connectionInfo": Object {
            "childIndex": 0,
            "parent": "branch-guid",
          },
          "geometry": Object {
            "h": 48,
            "w": 88,
            "x": -88,
            "y": 96,
          },
          "isFault": undefined,
          "labelType": 0,
          "svgInfo": Object {
            "geometry": Object {
              "h": 48,
              "w": 97,
              "x": -3,
              "y": 0,
            },
            "path": "M 3, 0
L 3, 8
A 16 16 0 0 0, 19, 24
L 75, 24
A 16 16 0 0 1, 91, 40
L 91, 48",
          },
          "toBeDeleted": false,
          "type": "mergeLeft",
        },
        Object {
          "connectionInfo": Object {
            "childIndex": 0,
            "parent": "branch-guid",
          },
          "geometry": Object {
            "h": 48,
            "w": 88,
            "x": 0,
            "y": 96,
          },
          "isFault": undefined,
          "labelType": 0,
          "svgInfo": Object {
            "geometry": Object {
              "h": 48,
              "w": 94,
              "x": -3,
              "y": 0,
            },
            "path": "M 91, 0
L 91, 8
A 16 16 0 0 1, 75, 24
L 19, 24
A 16 16 0 0 0, 3, 40
L 3, 48",
          },
          "toBeDeleted": false,
          "type": "mergeRight",
        },
      ],
      "menuOpened": false,
      "metadata": Object {
        "icon": "standard:default",
        "type": "branch",
      },
      "nextConnector": Object {
        "addInfo": Object {
          "menuOpened": false,
          "offsetY": 36,
        },
        "connectionInfo": Object {
          "next": "end-guid",
          "prev": "branch-guid",
        },
        "geometry": Object {
          "h": 96,
          "w": 6,
          "x": 0,
          "y": 120,
        },
        "isFault": undefined,
        "labelOffsetY": 48,
        "labelType": 0,
        "svgInfo": Object {
          "geometry": Object {
            "h": 120,
            "w": 6,
            "x": -3,
            "y": 0,
          },
          "path": "M 3, 24
L 3, 144",
        },
        "toBeDeleted": false,
        "type": "straight",
      },
      "node": Object {
        "children": Array [
          null,
          null,
        ],
        "defaultConnectorLabel": "Default Connector Label",
        "elementType": "branch",
        "guid": "branch-guid",
        "label": "branch-guid",
        "next": "end-guid",
        "prev": "start-guid",
      },
      "toBeDeleted": false,
    },
    Object {
      "config": undefined,
      "flows": Array [],
      "geometry": Object {
        "h": 0,
        "w": 48,
        "x": 0,
        "y": 336,
      },
      "guid": "end-guid",
      "isNew": false,
      "isTerminal": true,
      "label": "end-guid",
      "logicConnectors": Array [],
      "menuOpened": false,
      "metadata": Object {
        "icon": "standard:default",
        "type": "end",
      },
      "node": Object {
        "elementType": "END_ELEMENT",
        "guid": "end-guid",
        "label": "end-guid",
        "prev": "branch-guid",
      },
      "toBeDeleted": false,
    },
  ],
}
`;

exports[`flowRenderer renderFlow flow with empty decision with 3 branches 1`] = `
Object {
  "geometry": Object {
    "h": 384,
    "w": 528,
    "x": 0,
    "y": 0,
  },
  "isTerminal": true,
  "layoutConfig": Object {
    "branch": Object {
      "defaultWidth": 264,
      "emptyWidth": 176,
    },
    "connector": Object {
      "curveRadius": 16,
      "icon": Object {
        "h": 20,
        "w": 20,
      },
      "menu": Object {
        "h": 328,
        "w": 100,
      },
      "strokeWidth": 6,
      "types": Object {
        "straight": Object {
          "addOffset": 60,
          "h": 120,
          "labelOffset": 48,
          "variants": Object {
            "branchHead": Object {
              "addOffset": 84,
              "h": 144,
              "variants": Object {
                "center": Object {
                  "svgMarginBottom": -24,
                },
                "edge": Object {
                  "svgMarginTop": 24,
                },
                "fault": Object {
                  "labelOffset": 24,
                  "svgMarginTop": 24,
                },
              },
            },
            "branchHeadEmpty": Object {
              "addOffset": 84,
              "h": 120,
              "variants": Object {
                "center": Object {
                  "svgMarginBottom": -24,
                },
                "edge": Object {
                  "svgMarginBottom": 24,
                  "svgMarginTop": 24,
                },
                "fault": Object {
                  "labelOffset": 24,
                  "svgMarginTop": 24,
                },
                "loop": Object {
                  "svgMarginBottom": 48,
                },
              },
            },
            "branchTail": Object {
              "h": 96,
              "variants": Object {
                "center": Object {
                  "svgMarginBottom": -24,
                },
                "edge": Object {
                  "svgMarginBottom": 24,
                },
                "loop": Object {
                  "svgMarginBottom": 48,
                },
              },
            },
            "fault": Object {
              "labelOffset": 24,
              "svgMarginTop": 24,
            },
            "postMerge": Object {
              "addOffset": 36,
              "h": 96,
              "svgMarginTop": 24,
              "variants": Object {
                "center": Object {
                  "svgMarginBottom": -24,
                },
                "edge": Object {
                  "svgMarginBottom": 24,
                },
              },
            },
            "postMergeTail": Object {
              "addOffset": 36,
              "h": 72,
              "svgMarginTop": 24,
              "variants": Object {
                "center": Object {
                  "svgMarginBottom": -24,
                },
                "edge": Object {
                  "svgMarginBottom": 24,
                },
                "loop": Object {
                  "svgMarginBottom": 48,
                },
              },
            },
          },
        },
      },
    },
    "grid": Object {
      "h": 24,
      "w": 132,
    },
    "menu": Object {
      "marginBottom": 24,
    },
    "node": Object {
      "icon": Object {
        "h": 48,
        "w": 48,
      },
      "menu": Object {
        "branch": Object {
          "h": 225,
          "w": 100,
        },
        "default": Object {
          "h": 225,
          "w": 100,
        },
        "loop": Object {
          "h": 225,
          "w": 100,
        },
        "start": Object {
          "h": 200,
          "w": 100,
        },
      },
      "offsetX": 88,
      "w": 264,
    },
  },
  "nodes": Array [
    Object {
      "config": undefined,
      "flows": Array [],
      "geometry": Object {
        "h": 120,
        "w": 48,
        "x": 0,
        "y": 0,
      },
      "guid": "start-guid",
      "isNew": false,
      "isTerminal": false,
      "label": "start-guid",
      "logicConnectors": Array [],
      "menuOpened": false,
      "metadata": Object {
        "icon": "standard:default",
        "type": "start",
      },
      "nextConnector": Object {
        "addInfo": Object {
          "menuOpened": false,
          "offsetY": 60,
        },
        "connectionInfo": Object {
          "next": "branch-guid",
          "prev": "start-guid",
        },
        "geometry": Object {
          "h": 120,
          "w": 6,
          "x": 0,
          "y": 0,
        },
        "isFault": undefined,
        "labelOffsetY": 48,
        "labelType": 0,
        "svgInfo": Object {
          "geometry": Object {
            "h": 120,
            "w": 6,
            "x": -3,
            "y": 0,
          },
          "path": "M 3, 0
L 3, 120",
        },
        "toBeDeleted": false,
        "type": "straight",
      },
      "node": Object {
        "childIndex": 0,
        "elementType": "start",
        "guid": "start-guid",
        "isTerminal": true,
        "label": "start-guid",
        "next": "branch-guid",
        "parent": "root",
      },
      "toBeDeleted": false,
    },
    Object {
      "conditionOptions": undefined,
      "config": undefined,
      "defaultConnectorLabel": "Default Connector Label",
      "flows": Array [
        Object {
          "geometry": Object {
            "h": 120,
            "w": 176,
            "x": -176,
            "y": 0,
          },
          "isTerminal": false,
          "layoutConfig": Object {
            "branch": Object {
              "defaultWidth": 264,
              "emptyWidth": 176,
            },
            "connector": Object {
              "curveRadius": 16,
              "icon": Object {
                "h": 20,
                "w": 20,
              },
              "menu": Object {
                "h": 328,
                "w": 100,
              },
              "strokeWidth": 6,
              "types": Object {
                "straight": Object {
                  "addOffset": 60,
                  "h": 120,
                  "labelOffset": 48,
                  "variants": Object {
                    "branchHead": Object {
                      "addOffset": 84,
                      "h": 144,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginTop": 24,
                        },
                        "fault": Object {
                          "labelOffset": 24,
                          "svgMarginTop": 24,
                        },
                      },
                    },
                    "branchHeadEmpty": Object {
                      "addOffset": 84,
                      "h": 120,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginBottom": 24,
                          "svgMarginTop": 24,
                        },
                        "fault": Object {
                          "labelOffset": 24,
                          "svgMarginTop": 24,
                        },
                        "loop": Object {
                          "svgMarginBottom": 48,
                        },
                      },
                    },
                    "branchTail": Object {
                      "h": 96,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginBottom": 24,
                        },
                        "loop": Object {
                          "svgMarginBottom": 48,
                        },
                      },
                    },
                    "fault": Object {
                      "labelOffset": 24,
                      "svgMarginTop": 24,
                    },
                    "postMerge": Object {
                      "addOffset": 36,
                      "h": 96,
                      "svgMarginTop": 24,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginBottom": 24,
                        },
                      },
                    },
                    "postMergeTail": Object {
                      "addOffset": 36,
                      "h": 72,
                      "svgMarginTop": 24,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginBottom": 24,
                        },
                        "loop": Object {
                          "svgMarginBottom": 48,
                        },
                      },
                    },
                  },
                },
              },
            },
            "grid": Object {
              "h": 24,
              "w": 132,
            },
            "menu": Object {
              "marginBottom": 24,
            },
            "node": Object {
              "icon": Object {
                "h": 48,
                "w": 48,
              },
              "menu": Object {
                "branch": Object {
                  "h": 225,
                  "w": 100,
                },
                "default": Object {
                  "h": 225,
                  "w": 100,
                },
                "loop": Object {
                  "h": 225,
                  "w": 100,
                },
                "start": Object {
                  "h": 200,
                  "w": 100,
                },
              },
              "offsetX": 88,
              "w": 264,
            },
          },
          "nodes": Array [],
          "preConnector": Object {
            "addInfo": Object {
              "menuOpened": false,
              "offsetY": 84,
            },
            "connectionInfo": Object {
              "childIndex": 0,
              "parent": "branch-guid",
            },
            "geometry": Object {
              "h": 120,
              "w": 6,
              "x": 0,
              "y": 0,
            },
            "isFault": false,
            "labelOffsetY": 48,
            "labelType": 1,
            "svgInfo": Object {
              "geometry": Object {
                "h": 120,
                "w": 6,
                "x": -3,
                "y": 0,
              },
              "path": "M 3, 24
L 3, 96",
            },
            "toBeDeleted": false,
            "type": "straight",
          },
        },
        Object {
          "geometry": Object {
            "h": 120,
            "w": 176,
            "x": 0,
            "y": 0,
          },
          "isTerminal": false,
          "layoutConfig": Object {
            "branch": Object {
              "defaultWidth": 264,
              "emptyWidth": 176,
            },
            "connector": Object {
              "curveRadius": 16,
              "icon": Object {
                "h": 20,
                "w": 20,
              },
              "menu": Object {
                "h": 328,
                "w": 100,
              },
              "strokeWidth": 6,
              "types": Object {
                "straight": Object {
                  "addOffset": 60,
                  "h": 120,
                  "labelOffset": 48,
                  "variants": Object {
                    "branchHead": Object {
                      "addOffset": 84,
                      "h": 144,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginTop": 24,
                        },
                        "fault": Object {
                          "labelOffset": 24,
                          "svgMarginTop": 24,
                        },
                      },
                    },
                    "branchHeadEmpty": Object {
                      "addOffset": 84,
                      "h": 120,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginBottom": 24,
                          "svgMarginTop": 24,
                        },
                        "fault": Object {
                          "labelOffset": 24,
                          "svgMarginTop": 24,
                        },
                        "loop": Object {
                          "svgMarginBottom": 48,
                        },
                      },
                    },
                    "branchTail": Object {
                      "h": 96,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginBottom": 24,
                        },
                        "loop": Object {
                          "svgMarginBottom": 48,
                        },
                      },
                    },
                    "fault": Object {
                      "labelOffset": 24,
                      "svgMarginTop": 24,
                    },
                    "postMerge": Object {
                      "addOffset": 36,
                      "h": 96,
                      "svgMarginTop": 24,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginBottom": 24,
                        },
                      },
                    },
                    "postMergeTail": Object {
                      "addOffset": 36,
                      "h": 72,
                      "svgMarginTop": 24,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginBottom": 24,
                        },
                        "loop": Object {
                          "svgMarginBottom": 48,
                        },
                      },
                    },
                  },
                },
              },
            },
            "grid": Object {
              "h": 24,
              "w": 132,
            },
            "menu": Object {
              "marginBottom": 24,
            },
            "node": Object {
              "icon": Object {
                "h": 48,
                "w": 48,
              },
              "menu": Object {
                "branch": Object {
                  "h": 225,
                  "w": 100,
                },
                "default": Object {
                  "h": 225,
                  "w": 100,
                },
                "loop": Object {
                  "h": 225,
                  "w": 100,
                },
                "start": Object {
                  "h": 200,
                  "w": 100,
                },
              },
              "offsetX": 88,
              "w": 264,
            },
          },
          "nodes": Array [],
          "preConnector": Object {
            "addInfo": Object {
              "menuOpened": false,
              "offsetY": 84,
            },
            "connectionInfo": Object {
              "childIndex": 1,
              "parent": "branch-guid",
            },
            "geometry": Object {
              "h": 120,
              "w": 6,
              "x": 0,
              "y": 0,
            },
            "isFault": false,
            "labelOffsetY": 48,
            "labelType": 1,
            "svgInfo": Object {
              "geometry": Object {
                "h": 144,
                "w": 6,
                "x": -3,
                "y": 0,
              },
              "path": "M 3, 0
L 3, 168",
            },
            "toBeDeleted": false,
            "type": "straight",
          },
        },
        Object {
          "geometry": Object {
            "h": 120,
            "w": 176,
            "x": 176,
            "y": 0,
          },
          "isTerminal": false,
          "layoutConfig": Object {
            "branch": Object {
              "defaultWidth": 264,
              "emptyWidth": 176,
            },
            "connector": Object {
              "curveRadius": 16,
              "icon": Object {
                "h": 20,
                "w": 20,
              },
              "menu": Object {
                "h": 328,
                "w": 100,
              },
              "strokeWidth": 6,
              "types": Object {
                "straight": Object {
                  "addOffset": 60,
                  "h": 120,
                  "labelOffset": 48,
                  "variants": Object {
                    "branchHead": Object {
                      "addOffset": 84,
                      "h": 144,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginTop": 24,
                        },
                        "fault": Object {
                          "labelOffset": 24,
                          "svgMarginTop": 24,
                        },
                      },
                    },
                    "branchHeadEmpty": Object {
                      "addOffset": 84,
                      "h": 120,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginBottom": 24,
                          "svgMarginTop": 24,
                        },
                        "fault": Object {
                          "labelOffset": 24,
                          "svgMarginTop": 24,
                        },
                        "loop": Object {
                          "svgMarginBottom": 48,
                        },
                      },
                    },
                    "branchTail": Object {
                      "h": 96,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginBottom": 24,
                        },
                        "loop": Object {
                          "svgMarginBottom": 48,
                        },
                      },
                    },
                    "fault": Object {
                      "labelOffset": 24,
                      "svgMarginTop": 24,
                    },
                    "postMerge": Object {
                      "addOffset": 36,
                      "h": 96,
                      "svgMarginTop": 24,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginBottom": 24,
                        },
                      },
                    },
                    "postMergeTail": Object {
                      "addOffset": 36,
                      "h": 72,
                      "svgMarginTop": 24,
                      "variants": Object {
                        "center": Object {
                          "svgMarginBottom": -24,
                        },
                        "edge": Object {
                          "svgMarginBottom": 24,
                        },
                        "loop": Object {
                          "svgMarginBottom": 48,
                        },
                      },
                    },
                  },
                },
              },
            },
            "grid": Object {
              "h": 24,
              "w": 132,
            },
            "menu": Object {
              "marginBottom": 24,
            },
            "node": Object {
              "icon": Object {
                "h": 48,
                "w": 48,
              },
              "menu": Object {
                "branch": Object {
                  "h": 225,
                  "w": 100,
                },
                "default": Object {
                  "h": 225,
                  "w": 100,
                },
                "loop": Object {
                  "h": 225,
                  "w": 100,
                },
                "start": Object {
                  "h": 200,
                  "w": 100,
                },
              },
              "offsetX": 88,
              "w": 264,
            },
          },
          "nodes": Array [],
          "preConnector": Object {
            "addInfo": Object {
              "menuOpened": false,
              "offsetY": 84,
            },
            "connectionInfo": Object {
              "childIndex": 2,
              "parent": "branch-guid",
            },
            "connectorBadgeLabel": "Default Connector Label",
            "geometry": Object {
              "h": 120,
              "w": 6,
              "x": 0,
              "y": 0,
            },
            "isFault": false,
            "labelOffsetY": 48,
            "labelType": 1,
            "svgInfo": Object {
              "geometry": Object {
                "h": 120,
                "w": 6,
                "x": -3,
                "y": 0,
              },
              "path": "M 3, 24
L 3, 96",
            },
            "toBeDeleted": false,
            "type": "straight",
          },
        },
      ],
      "geometry": Object {
        "h": 216,
        "w": 528,
        "x": 0,
        "y": 120,
      },
      "guid": "branch-guid",
      "isNew": false,
      "isTerminal": false,
      "label": "branch-guid",
      "logicConnectors": Array [
        Object {
          "connectionInfo": Object {
            "childIndex": 0,
            "parent": "branch-guid",
          },
          "geometry": Object {
            "h": 24,
            "w": 176,
            "x": -176,
            "y": 0,
          },
          "isFault": undefined,
          "labelType": 0,
          "svgInfo": Object {
            "geometry": Object {
              "h": 33,
              "w": 179,
              "x": -3,
              "y": -3,
            },
            "path": "M 179, 3
L 19, 3
A 16 16 0 0 0, 3, 19
L 3, 27",
          },
          "toBeDeleted": false,
          "type": "branchLeft",
        },
        Object {
          "connectionInfo": Object {
            "childIndex": 2,
            "parent": "branch-guid",
          },
          "geometry": Object {
            "h": 24,
            "w": 176,
            "x": 0,
            "y": 0,
          },
          "isFault": undefined,
          "labelType": 0,
          "svgInfo": Object {
            "geometry": Object {
              "h": 33,
              "w": 185,
              "x": -3,
              "y": -3,
            },
            "path": "M 3, 3
L 163, 3
A 16 16 0 0 1, 179, 19
L 179, 27",
          },
          "toBeDeleted": false,
          "type": "branchRight",
        },
        Object {
          "connectionInfo": Object {
            "childIndex": 0,
            "parent": "branch-guid",
          },
          "geometry": Object {
            "h": 48,
            "w": 176,
            "x": -176,
            "y": 96,
          },
          "isFault": undefined,
          "labelType": 0,
          "svgInfo": Object {
            "geometry": Object {
              "h": 48,
              "w": 185,
              "x": -3,
              "y": 0,
            },
            "path": "M 3, 0
L 3, 8
A 16 16 0 0 0, 19, 24
L 163, 24
A 16 16 0 0 1, 179, 40
L 179, 48",
          },
          "toBeDeleted": false,
          "type": "mergeLeft",
        },
        Object {
          "connectionInfo": Object {
            "childIndex": 0,
            "parent": "branch-guid",
          },
          "geometry": Object {
            "h": 48,
            "w": 176,
            "x": 0,
            "y": 96,
          },
          "isFault": undefined,
          "labelType": 0,
          "svgInfo": Object {
            "geometry": Object {
              "h": 48,
              "w": 182,
              "x": -3,
              "y": 0,
            },
            "path": "M 179, 0
L 179, 8
A 16 16 0 0 1, 163, 24
L 19, 24
A 16 16 0 0 0, 3, 40
L 3, 48",
          },
          "toBeDeleted": false,
          "type": "mergeRight",
        },
      ],
      "menuOpened": false,
      "metadata": Object {
        "icon": "standard:default",
        "type": "branch",
      },
      "nextConnector": Object {
        "addInfo": Object {
          "menuOpened": false,
          "offsetY": 36,
        },
        "connectionInfo": Object {
          "next": "end-guid",
          "prev": "branch-guid",
        },
        "geometry": Object {
          "h": 96,
          "w": 6,
          "x": 0,
          "y": 120,
        },
        "isFault": undefined,
        "labelOffsetY": 48,
        "labelType": 0,
        "svgInfo": Object {
          "geometry": Object {
            "h": 120,
            "w": 6,
            "x": -3,
            "y": 0,
          },
          "path": "M 3, 24
L 3, 144",
        },
        "toBeDeleted": false,
        "type": "straight",
      },
      "node": Object {
        "children": Array [
          null,
          null,
          null,
        ],
        "defaultConnectorLabel": "Default Connector Label",
        "elementType": "branch",
        "guid": "branch-guid",
        "label": "branch-guid",
        "next": "end-guid",
        "prev": "start-guid",
      },
      "toBeDeleted": false,
    },
    Object {
      "config": undefined,
      "flows": Array [],
      "geometry": Object {
        "h": 0,
        "w": 48,
        "x": 0,
        "y": 336,
      },
      "guid": "end-guid",
      "isNew": false,
      "isTerminal": true,
      "label": "end-guid",
      "logicConnectors": Array [],
      "menuOpened": false,
      "metadata": Object {
        "icon": "standard:default",
        "type": "end",
      },
      "node": Object {
        "elementType": "END_ELEMENT",
        "guid": "end-guid",
        "label": "end-guid",
        "prev": "branch-guid",
      },
      "toBeDeleted": false,
    },
  ],
}
`;
